--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,7 @@
 a {
-  font-family: monospace;
-  font-size: 32px;
-  color: inherit;
-  text-decoration: none;
-  margin-right: 5%;
-  color: white;
+  font-size: clamp(3rem, 15vmin, 8rem);
+  font-family: sans-serif;
+  color:#fff;
 }
 
 html{
@@ -75,4 +72,10 @@ img{
 .carritoimg{
   width: 50px;
   height: 50px;
+}
+body{
+  display: grid;
+  place-items: center;
+  min-height: 100vh;
+  background: hsl(210 30% 24%);
 }
